2008-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* ConsiderCustomAccessorsForNonVisibleEventsRule.cs: New. Rule 
	that checks type non-visible events and report them if they are 
	marked as synchronized (making it possible to remove the lock, if
	unneeded, and remove the lock performance penality).
	* Gendarme.Rules.Performance.mdp: Update MD project file.
	* Makefile.am: add rule and tests to the build.

2008-05-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidUnneededUnboxingRule.cs: New. Rule to warn about multiple,
	unneeded, unboxing inside methods.
	* Makefile.am: add rule and tests to the build.

2008-05-17  Sebastien Pouliot  <sebastien@ximian.com>

	* RemoveUnusedLocalVariablesRule.cs: New. Rule to warn about unused
	variables inside methods.
	* Makefile.am: add rule and tests to the build.

2008-05-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontIgnoreMethodResultRule.cs: Change logic to check for specific
	cases (black list) instead of everything minus exceptions (white-
	listing). Cut down a lot on false positives.

2008-05-01  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidLargeStructureRule.cs: Remove unused GetPackSize method.
	Use IsPrimitive definition (inside a collection, the switch case 
	was big enough to do the same) for well known values.

2008-04-27  Andres G. Aragoneses  <aaragoneses@novell.com>

	* Gendarme.Rules.Performance.mdp: updated.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* AvoidUnusedParametersRule.cs: replace IsEventCallback
	method by a call to the rock of the same name.

2008-04-27  Jb Evain  <jbevain@novell.com>

	* AvoidUnusedParametersRule.cs: refactoring work.
	Rule does not apply any more to even callbacks of kind
	Callback (object sender, *EventArgs ea).

2008-04-27  Jb Evain  <jbevain@novell.com>

	* AvoidUninstantiatedInternalClassesRule.cs: remove
	duplicated code using the AllMethods rocks.

2008-04-27  Jb Evain  <jbevain@novell.com>
