@@ -1,3 +1,14 @@
+2008-06-11  Jb Evain  <jbevain@novell.com>
+
+	* AvoidUninstantiatedInternalClassesRule.cs: when facing
+	an internal sealed class, with a single private ctor, the
+	rule does not apply, it's basically a static class.
+
+2008-06-11  Jb Evain  <jbevain@novell.com>
+
+	* AvoidUninstantiatedInternalClassesTest.cs: add tests for
+	the sealed + private ctor case, and abstract + private ctor case.
+
 2008-06-04  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ConsiderCustomAccessorsForNonVisibleEventsRule.cs: New. Rule 
